Update and rename rust.yml to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build
 
 on:
   push:
@@ -12,8 +12,14 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - windows
+          - ubuntu
+          - macos
+          
     steps:
     - uses: actions/checkout@v3
     - name: Build
