--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-env:
-  CARGO_TERM_COLOR: always
-
+    
 jobs:
   build:
 
@@ -21,8 +18,14 @@ jobs:
           - macos
           
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Install Rust Toolchain
+    - uses: dtolnay/rust-toolchain@stable
+    
+    - name: Cache dependencies
+    - uses: Swatinem/rust-cache@v2.2.1
+    
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
