--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
       matrix:
         os:
           - windows-latest
+          - ubuntu-latest
           - macos-latest
 
     runs-on: ${{ matrix.os }}
