Update workflow again again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ matrix.os }}
-        path: /target/release/volt(.exe)?
+        path: |
+           /target/release/volt
+           /target/release/volt.exe
