--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Build
 
 on: [push, pull_request]
-    
+
 jobs:
   build:
-
     strategy:
       matrix:
         os:
@@ -13,29 +12,29 @@ jobs:
           - macos-latest
 
     runs-on: ${{ matrix.os }}
-          
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      
-    - name: Install Rust Toolchain
-      uses: dtolnay/rust-toolchain@stable
-    
-    - name: Cache dependencies
-      uses: Swatinem/rust-cache@v2.2.1
-    
-    - name: Install webkit2gtk-4.1
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt install libwebkit2gtk-4.1-dev
-    
-    - name: Build
-      run: cargo build --release --verbose
 
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.os }}
-        path: |
-           /target/release/volt
-           /target/release/volt.exe
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Rust Toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache dependencies
+        uses: Swatinem/rust-cache@v2.2.1
+
+      - name: Install webkit2gtk-4.1
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt install libwebkit2gtk-4.1-dev
+
+      - name: Build
+        run: cargo build --release --verbose
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.os }}
+          path: |
+            /**/target/release/volt
+            /**/target/release/volt.exe
