Try again this is getting annoying

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,4 @@ jobs:
         with:
           name: ${{ matrix.os }}
           path: |
-            /**/target/release/volt
-            /**/target/release/volt.exe
+            target/release/volt
