--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,5 @@ jobs:
         with:
           name: ${{ matrix.os }}
           path: |
-            target/release/volt(|.exe)
+            target/release/volt
+            target/release/volt.exe
