Add depend on rustfmt & clippy for build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
         run: cargo clippy -- -D warnings
 
   build:
+    needs: ["rustfmt", "clippy"]
+
     strategy:
       matrix:
         os:
