--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,13 @@ name: Build
 on: [push, pull_request]
 
 jobs:
+  ubuntu-deps:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install webkit2gtk-4.1
+        run: |
+          sudo apt install libwebkit2gtk-4.1-dev
+
   rustfmt:
     runs-on: ubuntu-latest
     steps:
@@ -33,6 +40,7 @@ jobs:
 
   build:
     needs: ["rustfmt", "clippy"]
+    needs: ${{ matrix.os == 'ubuntu-latest' && '["ubuntu-deps", "rustfmt", "clippy"]' || '["rustfmt", "clippy"]' }}
 
     strategy:
       matrix:
@@ -52,11 +60,6 @@ jobs:
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2.2.1
-
-      - name: Install webkit2gtk-4.1
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt install libwebkit2gtk-4.1-dev
 
       - name: Build
         run: cargo build --release --verbose
