--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
           sudo apt install libwebkit2gtk-4.1-dev
 
   rustfmt:
+    needs: "ubuntu-deps"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
