--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+
+
       - name: Install Rust Toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -27,6 +29,9 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           components: "clippy"
+
+      - name: Cache dependencies
+        uses: Swatinem/rust-cache@v2.2.1
       
       - name: Install webkit2gtk-4.1
         run: |
