Update artifact path to reflect project name change

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,5 +71,5 @@ jobs:
         with:
           name: ${{ matrix.os }}
           path: |
-            target/release/volt
-            target/release/volt.exe
+            target/release/revolt
+            target/release/revolt.exe
