--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Install webkit2gtk-4.1
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
+          sudo apt update
           sudo apt install libwebkit2gtk-4.1-dev
 
       - name: Cache dependencies
