--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["KiraCoding"]
 edition = "2021"
 rust-version = "1.64.0"
-license = "MIT or Apache-2.0"
+license = "Apache-2.0 OR MIT"
 
 [dependencies]
 directories = { version = "5.0.1" }
