--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["KiraCoding"]
 edition = "2021"
 rust-version = "1.64.0"
+description = "Webview based Discord client"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
