--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ directories = { version = "5.0.1" }
 open = { version = "5.0.0" }
 wry = { version = "0.31.1", default-features = false }
 
+[build-dependencies]
+swc = { version = "0.264.63" }
+swc_common = { version = "0.31.21" }
+
 [profile.release]
 codegen-units = 1
 strip = true
