Fix `shared-key` value

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2.2.1
         with:
-          shared-key: matrix.os
+          shared-key: ${{ matrix.os }}
 
       - name: Build
         run: cargo build --release --verbose
