--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           components: "clippy"
 
       - name: Cache dependencies
-        uses: Swatinem/rust-cache@v2.2.
+        uses: Swatinem/rust-cache@v2.2.1
         with:
            shared-key: "macos-latest"
       
