Disable threaded compilation
this made errors on github actions VMs

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 # [unstable]
 # build-std = ["core", "alloc", "std", "proc_macro"]
 
-[build]
-rustflags = ["-Z", "threads=8"]
+# [build]
+# rustflags = ["-Z", "threads=8"]
