--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}
+          name: volt-${{ matrix.os }}
           path: |
             target/release/volt
             target/release/volt.exe
