--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ wry = { version = "0.36.0", default-features = false, features = [
 [build-dependencies]
 swc = { version = "0.273.6" }
 swc_common = { version = "0.33.17" }
+winres = { version = "0.1.12" }
 
 [profile.release]
 codegen-units = 1
